# auvs

./: .gitignore  DIALOG_LOG.md  rebuild.sh  waypoints.txt  waypoints_test.txt
results/: log_p.log.txt  run_20260531_105932.csv  run_20260531_105932_summary.txt  run_20260531_110929.csv  run_20260531_110929_summary.txt  run_20260531_111319.csv  run_20260531_111319_summary.txt
src/my_auv_bringup/: package.xml  setup.py
src/my_auv_bringup/config/: auv.rviz  bridge_config.yaml
src/my_auv_bringup/launch/: analysis.launch.py  sim_nb.launch.py  simulation.launch.py  test_world.launch.py
src/my_auv_bringup/worlds/: static_world.sdf  test_world.sdf
src/my_auv_control/: package.xml  setup.cfg  setup.py
src/my_auv_control/auv_nav/: autopilot_demo.py  autopilot_node.py  depth_ballast.py  depth_rudder.py  guidance.py  heading.py  log_parser.py  models.py  obstacle_avoidance.py  phase_manager.py  pid_controller.py  roll.py  sensor_fusion.py  telemetry.py  version.py
src/my_auv_control/my_auv_control/: alt_ballast_control.py  auv_control_mixer.py  auv_pid_nav.py  auv_test_straight.py  ballast_control.py  ballast_neutral_finder.py  fake_barometer.py  mass_calibration.py  mixer_nb.py  pitch_stabilizer.py  test_straight.py
src/my_auv_description/: CMakeLists.txt  package.xml
src/my_auv_description/models/: submarine.sdf  submarine_nb.sdf
src/my_auv_description/models/meshes/: bubl.stl
