<?xml version="1.0"?>
<package format="3">
  <name>my_auv_description</name>
  <version>0.1.0</version>
  <description>AUV model</description>
  <maintainer email="golfe@local.local">golfe</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
